# prod9

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  REFACTORING.md  WORKFLOWS.md  pyproject.toml
.github/workflows/: test.yml
configs/: autoencoder.yaml  brats_autoencoder.yaml  brats_transformer.yaml  medmnist3d_transformer.yaml  transformer.yaml
src/prod9/autoencoder/: __init__.py  ae_fsq.py  autoencoder_fsq.py  autoencoder_maisi.py  factory.py  inference.py  padding.py
src/prod9/cli/: __init__.py  autoencoder.py  maisi_controlnet.py  maisi_diffusion.py  maisi_vae.py  shared.py  transformer.py
src/prod9/configs/: README.md  brats_autoencoder.yaml  brats_maisi_controlnet.yaml  brats_maisi_diffusion.yaml  brats_maisi_vae.yaml  brats_transformer.yaml  medmnist3d_autoencoder.yaml  medmnist3d_maisi_vae.yaml  medmnist3d_transformer.yaml
src/prod9/configs/maisi/: README.md
src/prod9/configs/maskgit/: README.md  (+5 more)
src/prod9/controlnet/: __init__.py  condition_encoder.py  controlnet_model.py
src/prod9/data/: builders.py  transforms.py
src/prod9/diffusion/: __init__.py  diffusion_model.py  sampling.py  scheduler.py
src/prod9/generator/: maskgit.py  modality_processor.py  modules.py  transformer.py  utils.py
src/prod9/training/: __init__.py  autoencoder.py  autoencoder_config.py  brats_controlnet_data.py  brats_data.py  callbacks.py  cli.py  config.py  config_schema.py  controlnet_lightning.py  data.py  discriminator.py  lightning_module.py  losses.py  maisi_controlnet_config.py  maisi_diffusion.py  maisi_diffusion_config.py  maisi_vae.py  maisi_vae_config.py  medmnist3d_data.py  metrics.py  networks.py  schedulers.py  transformer.py  transformer_config.py  utils.py
tests/: __init__.py  conftest.py  test_autoencoder.py  test_helpers.py  test_label_conversion.py  test_maskgit.py  test_scheduler.py  test_training_callbacks.py  test_training_components.py  test_training_config.py  test_training_data.py  test_training_losses.py  test_training_metrics.py  test_training_networks.py  test_transformer.py
tests/integration/: test_cli_autoencoder.py  test_cli_transformer.py  test_fsq_lightning_harness.py  test_maisi_lightning_harness.py  test_stage2_default_scheduler.py  test_training_integration.py
tests/system/: __init__.py  test_autoencoder_training.py  test_end_to_end.py  test_transformer_training.py
tests/unit/: __init__.py
tests/unit/autoencoder/: __init__.py  test_autoencoder.py  test_inference_scale.py  test_inference_wrapper.py  test_padding.py
tests/unit/cli/: test_autoencoder_cli.py  test_entry_points.py  test_maisi_controlnet_cli.py  test_maisi_diffusion_cli.py  test_maisi_vae_cli.py  test_shared.py  test_transformer_cli.py
tests/unit/controlnet/: test_condition_encoder.py
tests/unit/data/: test_transforms.py
tests/unit/diffusion/: test_sampling.py  test_scheduler.py
tests/unit/generator/: __init__.py  test_maskgit.py  test_modality_processor.py  test_pure_in_context.py  test_scheduler.py  test_transformer.py  test_utils.py
tests/unit/training/: test_amp_gradient_clipping.py  test_autoencoder_config.py  test_autoencoder_trainer.py  test_brats_controlnet_data.py  test_checkpoint_manager.py  test_config_schema.py  test_controlnet_trainer.py  test_data_env_vars.py  test_diffusion_trainer.py  test_discriminator_warmup.py  test_lightning_test_harness.py  test_maisi_vae.py  test_medmnist3d_data.py  test_model_factory.py  test_schedulers.py  test_training_callbacks.py  test_training_config.py  test_training_data.py  test_training_losses.py  test_training_losses.py.bak  test_training_metrics.py  test_training_networks.py  test_transformer_setup.py  test_transformer_trainer.py  test_transformer_training.py  test_vae_gan_trainer.py
(+37 files in other folders)
