[project]
name = "prod9"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "torch",
    "einops",
    "monai[all]",
    "pytorch-lightning>=2.0",
    "torchmetrics",
    "numpy",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Modular CLI
prod9-train-autoencoder = "prod9.training.cli.autoencoder:main"
prod9-train-transformer = "prod9.training.cli.transformer:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/prod9/__init__.py"

