[project]
name = "prod9"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "torch>=2.0.0",
    "einops",
    "monai[all]>=1.3.0",
    "pytorch-lightning>=2.0",
    "torchmetrics",
    "numpy",
    "pyyaml",
    "python-dotenv",
    "pydantic>=2.0",
    "medmnist",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=3.19",
    "medmnist",
    "isort"
]

[project.scripts]
# Modular CLI
prod9-train-autoencoder = "prod9.cli.autoencoder:main"
prod9-train-transformer = "prod9.cli.transformer:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/prod9/__init__.py"

[tool.hatch.build]
include = ["src/prod9/configs/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/prod9"]
