[project]
name = "prod9"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "torch>=2.0.0",
    "einops",
    "monai[all]>=1.3.0",
    "pytorch-lightning>=2.0",
    "torchmetrics",
    "numpy",
    "pyyaml",
    "python-dotenv",
    "pydantic>=2.0",
    "medmnist",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.300",
    "medmnist",
    "isort"
]

[project.scripts]
# Modular CLI
prod9-train-autoencoder = "prod9.cli.autoencoder:main"
prod9-train-transformer = "prod9.cli.transformer:main"
# MAISI CLI
prod9-train-maisi-vae = "prod9.cli.maisi_vae:main"
prod9-train-maisi-diffusion = "prod9.cli.maisi_diffusion:main"
prod9-train-maisi-controlnet = "prod9.cli.maisi_controlnet:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/prod9/__init__.py"

[tool.hatch.build]
include = ["src/prod9/configs/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/prod9"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["prod9"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["prod9"]
skip_gitignore = true

[tool.pyright]
include = ["src/prod9"]
exclude = ["**/node_modules", "**/__pycache__", ".git", "build", "dist"]
typeCheckingMode = "standard"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false
